creati contenitori per barra laterale e main-area

--- a/index.html
+++ b/index.html
@@ -16,23 +16,39 @@
 
 <body>
   <!--contenitore principale-->
-    <!--barra a sinistra, fissa-->
+  <main id="main">
+
+    
+    <!--barra a sinistra, fissa--> 
+    <section id="left-side">
+ 
+
+    </section>
 
     <!--area principale-->
+    <section id="main-area">
+      <div class="container-fluid">
 
-      <!--navgazione-->
-
-      <!--sezione consigliati-->
-
-      <!--sezione recenti-->
+      wergòwmrefòlwkm
 
 
-  <!--sezione player-->
-    <!--titolo corrente-->
-    
-    <!--controlli player-->
+        <!--navgazione-->
 
-    <!--impostazioni-->
+        <!--sezione consigliati-->
+
+        <!--sezione recenti-->
+
+</div>
+    </section>
+
+ 
+  </main>
+  <!--sezione player, fissa-->
+  <!--titolo corrente-->
+
+  <!--controlli player-->
+
+  <!--impostazioni-->
 </body>
 
 </html>
