--- a/index.html
+++ b/index.html
@@ -7,48 +7,55 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  <!--   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
   <link rel="stylesheet" href="style.css">
   <title>Spotify</title>
 </head>
 
 <body>
-  <!--contenitore principale-->
-  <main id="main">
+  <div id="wrapper">
+    <!--contenitore principale-->
+    <main id="main">
 
-    
-    <!--barra a sinistra, fissa--> 
-    <section id="left-side">
- 
-
-    </section>
-
-    <!--area principale-->
-    <section id="main-area">
-      <div class="container-fluid">
-
-      wergòwmrefòlwkm
+      <!--barra a sinistra, fissa-->
+      <section id="left-side">
 
 
+      </section>
+
+      <!--area principale-->
+      <section id="right-side">
+        Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum è
+        considerato il testo segnaposto standard sin dal sedicesimo secolo, quando un anonimo tipografo prese una
+        cassetta di caratteri e li assemblò per preparare un testo campione. È sopravvissuto non solo a più di cinque
+        secoli, ma anche al passaggio alla videoimpaginazione, pervenendoci sostanzialmente inalterato. Fu reso
+        popolare, negli anni ’60, con la diffusione dei fogli di caratteri trasferibili “Letraset”, che contenevano
+        passaggi del Lorem Ipsum, e più recentemente da software di impaginazione come Aldus PageMaker, che includeva
+        versioni del Lorem Ipsum.
         <!--navgazione-->
 
         <!--sezione consigliati-->
 
         <!--sezione recenti-->
 
-</div>
+
+      </section>
+
+
+    </main>
+    <!--sezione player, fissa-->
+    <section id="player">
+
+
+      <!--brano corrente-->
+
+      <!--controlli player-->
+
+      <!--impostazioni-->
     </section>
-
- 
-  </main>
-  <!--sezione player, fissa-->
-  <!--titolo corrente-->
-
-  <!--controlli player-->
-
-  <!--impostazioni-->
+  </div>
 </body>
 
 </html>
