scaffolding lato sinistro e lato destro

--- a/index.html
+++ b/index.html
@@ -21,19 +21,30 @@
 
       <!--barra a sinistra, fissa-->
       <section id="left-side">
-
-
+        <div class="flex-container">
+          <div class="top">
+            <div id="brand"></div>
+            <div class="navigation"></div>
+            <div class="navigation"></div>
+          </div>
+          
+          <div class="bottom">
+            <div>install</div>
+            <hr>
+            <div id="user">User</div>
+          </div>
+        </div>
       </section>
 
       <!--area principale-->
       <section id="right-side">
-          Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum è considerato il testo segnaposto standard sin dal sedicesimo secolo, quando un anonimo tipografo prese una cassetta di caratteri e li assemblò per preparare un testo campione. È sopravvissuto non solo a più di cinque secoli, ma anche al passaggio alla videoimpaginazione, pervenendoci sostanzialmente inalterato. Fu reso popolare, negli anni ’60, con la diffusione dei fogli di caratteri trasferibili “Letraset”, che contenevano passaggi del Lorem Ipsum, e più recentemente da software di impaginazione come Aldus PageMaker, che includeva versioni del Lorem Ipsum.
         <!--navgazione-->
+        <div id="navigazione"></div>
 
         <!--sezione consigliati-->
-
+        <div class="album-container"></div>
         <!--sezione recenti-->
-
+        <div class="album-container"></div>
 
       </section>
 
