impostate sezioni lato sinistro in ottica flex

--- a/index.html
+++ b/index.html
@@ -23,11 +23,35 @@
       <section id="left-side">
         <div class="flex-container">
           <div class="top">
-            <div id="brand"></div>
-            <div class="navigation"></div>
-            <div class="navigation"></div>
+
+            <div id="brand">
+              <img src="" alt=""> Spotify</div>
+
+            <div class="navigation">
+              <div class="nav-button"><a href="#">Cerca</a></div>
+              <div class="nav-button"><a href="#">Home</a></div>
+              <div class="nav-button"><a href="#">La tua libreria</a></div>
+            </div>
+
+            <div>ASCOLTATI DI RECENTE</div>
+
+            <div class="navigation">
+              <div class="nav-button">
+                <a href="#">
+                  <p>Daft Punk</p>
+                  <p>ARTISTA</p>
+                </a>
+              </div>
+              <div class="nav-button">
+                  <a href="#">
+                    <p>Bigger Better Faster Stronger</p>
+                    <p>ALBUM</p>
+                  </a>
+                </div>
+            </div>
+
           </div>
-          
+
           <div class="bottom">
             <div>install</div>
             <hr>
@@ -52,13 +76,17 @@
     </main>
     <!--sezione player, fissa-->
     <section id="player">
+      <div class="flex-container">
+
+        <!--brano corrente-->
+        <div id="brano"></div>
+        <!--controlli player-->
+        <div id="controlli"></div>
+        <!--impostazioni-->
+        <div id="impostazioni"></div>
 
 
-      <!--brano corrente-->
-
-      <!--controlli player-->
-
-      <!--impostazioni-->
+      </div>
     </section>
   </div>
 </body>
