aggiunti loghi mobile e desktop

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <div class="top">
 
             <div id="brand">
-              <img src="" alt=""> Spotify</div>
+             <a class="hide-mobile" href="#"><img src="img/logo.png" alt=""></a> 
+              <a class="hide-desktop" href="#"><img src="img/logo mobile.png" alt=""></a> 
+            </div>
 
             <div class="navigation">
               <div class="nav-button"><a href="#">Cerca</a></div>
