--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   -->
   <!--   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script> -->
@@ -25,31 +26,33 @@
           <div class="top">
 
             <div id="brand">
-             <a class="hide-mobile" href="#"><img src="img/logo.png" alt=""></a> 
-              <a class="hide-desktop" href="#"><img src="img/logo mobile.png" alt=""></a> 
+              <a class="hide-mobile" href="#"><img src="img/logo.png" alt=""></a>
+              <a class="hide-desktop" href="#"><img src="img/logo mobile.png" alt=""></a>
             </div>
 
             <div class="navigation">
-              <div class="nav-button"><a href="#">Cerca</a></div>
-              <div class="nav-button"><a href="#">Home</a></div>
-              <div class="nav-button"><a href="#">La tua libreria</a></div>
+              <div class="nav-button"><a class="nav-link" href="#">Cerca</a></div>
+              <div class="nav-button"><a class="nav-link" href="#">Home</a></div>
+              <div class="nav-button"><a class="nav-link" href="#">La tua libreria</a></div>
             </div>
 
-            <div>ASCOLTATI DI RECENTE</div>
+            <div id="recent">
+              <div class="label">ASCOLTATI DI RECENTE</div>
 
-            <div class="navigation">
-              <div class="nav-button">
-                <a href="#">
-                  <p>Daft Punk</p>
-                  <p>ARTISTA</p>
-                </a>
-              </div>
-              <div class="nav-button">
-                  <a href="#">
+              <div class="navigation">
+                <div class="nav-button">
+                  <a class="nav-link" href="#">
+                    <p>Daft Punk</p>
+                    <p>ARTISTA</p>
+                  </a>
+                </div>
+                <div class="nav-button">
+                  <a class="nav-link" href="#">
                     <p>Bigger Better Faster Stronger</p>
                     <p>ALBUM</p>
                   </a>
                 </div>
+              </div>
             </div>
 
           </div>
