impostata area di navigazione right-side

--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
       <!--area principale-->
       <section id="right-side">
         <!--navgazione-->
-        <div id="navigazione"></div>
+        <div id="navigazione">
+          <div class="flex-container">
+            <div class="nav-label">IN EVIDENZA</div>
+            <div class="nav-label">PODCAST</div>
+            <div class="nav-label">CLASSIFICHE</div>
+            <div class="nav-label">GENERI E MOOD</div>
+            <div class="nav-label">NUOVE USCITE</div>
+            <div class="nav-label">SCOPRI</div>
+          </div>
+        </div>
 
         <!--sezione consigliati-->
         <div class="album-container"></div>
