prima impostazione sezione album

--- a/index.html
+++ b/index.html
@@ -80,7 +80,39 @@
         </div>
 
         <!--sezione consigliati-->
-        <div class="album-container"></div>
+        <div class="album-container">
+          <h1>Creato per te</h1>
+          <div class="flex-container albums">
+            <div class="album">
+              <img class="round" src="img/album_1.jpg" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_2.jpg" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_3.jpg" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_4.png" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_5.jpg" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_6.jpg" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_7.jpg" alt="Handsome devils">
+              <p>Handsome devils</p>
+            </div>
+          </div>
+        </div>
         <!--sezione recenti-->
         <div class="album-container"></div>
 
