--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="top">
 
             <div id="brand">
-              <a class="hide-mobile" href="#"><img src="img/logo.png" alt=""></a>
-              <a class="hide-desktop" href="#"><img src="img/logo mobile.png" alt=""></a>
+              <a class="hide-when-mobile" href="#"><img src="img/logo.png" alt=""></a>
+              <a class="hide-when-desktop" href="#"><img src="img/logo mobile.png" alt=""></a>
             </div>
 
             <div class="navigation">
@@ -68,7 +68,8 @@
       <!--area principale-->
       <section id="right-side">
         <!--navgazione-->
-        <div id="navigazione">
+        <div id="navigazione" class=" hide-when-mobile">
+
           <div class="flex-container">
             <div class="nav-label">IN EVIDENZA</div>
             <div class="nav-label">PODCAST</div>
@@ -77,7 +78,20 @@
             <div class="nav-label">NUOVE USCITE</div>
             <div class="nav-label">SCOPRI</div>
           </div>
+
         </div>
+
+
+        <div id="navigazione-mobile" class="hide-when-desktop">
+          <div class="flex-container">
+            <div class="hamburger">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
+
 
         <!--sezione consigliati-->
         <div class="album-container">
