--- a/index.html
+++ b/index.html
@@ -99,31 +99,31 @@
           <div class="flex-container albums">
             <div class="album">
               <img class="round" src="img/album_1.jpg" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <p class="album-label">Handsome Devils</p>
             </div>
             <div class="album">
               <img class="round" src="img/album_2.jpg" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <p class="album-label">Columbia Records</p>
             </div>
             <div class="album">
-              <img class="round" src="img/album_3.jpg" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <img class="" src="img/album_3.jpg" alt="Handsome devils">
+              <p class="album-label">Jason Derulo</p>
             </div>
             <div class="album">
               <img class="round" src="img/album_4.png" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <p class="album-label">Twentyone Pilots</p>
             </div>
             <div class="album">
               <img class="round" src="img/album_5.jpg" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <p class="album-label">Iron Maiden</p>
             </div>
             <div class="album">
-              <img class="round" src="img/album_6.jpg" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <img class="" src="img/album_6.jpg" alt="Handsome devils">
+              <p class="album-label">Queen</p>
             </div>
             <div class="album">
-              <img class="round" src="img/album_7.jpg" alt="Handsome devils">
-              <p>Handsome devils</p>
+              <img class="" src="img/album_7.jpg" alt="Handsome devils">
+              <p class="album-label">Gorillaz</p>
             </div>
           </div>
         </div>
@@ -139,7 +139,16 @@
       <div class="flex-container">
 
         <!--brano corrente-->
-        <div id="brano"></div>
+        <div id="brano">
+          <div class="flex-container">
+            <img class="album-thumb" src="img/album_1.jpg" alt="playing">
+            <div class="label">
+              <p class="label-artist">Sample Artist</p>
+              <p class="label-music">Sample music</p>
+            </div>
+
+          </div>
+        </div>
         <!--controlli player-->
         <div id="controlli"></div>
         <!--impostazioni-->
