aggiunte icone bootstrap

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!--   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="bootstrap/bootstrap.css">
   <link rel="stylesheet" href="style.css">
   <title>Spotify</title>
 </head>
@@ -142,11 +143,11 @@
         <div id="brano">
           <div class="flex-container">
             <img class="album-thumb" src="img/album_1.jpg" alt="playing">
-            <div class="label">
+            <div class="label hide-when-mobile">
               <p class="label-artist">Sample Artist</p>
               <p class="label-music">Sample music</p>
             </div>
-
+            <div class="glyphicon glyphicon-heart-empty"></div>
           </div>
         </div>
         <!--controlli player-->
