prima impostazione sezione seeker

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="bootstrap/bootstrap.css">
   <link rel="stylesheet" href="style.css">
   <title>Spotify</title>
 </head>
@@ -151,7 +151,26 @@
           </div>
         </div>
         <!--controlli player-->
-        <div id="controlli"></div>
+        <div id="controlli">
+
+          <div class="flex-container">
+
+            <div class="play-controls">
+              <span class="glyphicon glyphicon-step-backward"></span>
+              <span class="glyphicon glyphicon-pause"></span>
+              <span class="glyphicon glyphicon-step-forward"></span>
+            </div>
+
+            <div class="seeker">
+              <div class="flex-container">
+                <div>1:00</div>
+                <div class="seeker-bar"><input type="range" name="" id=""></div>
+                <div>3:15</div>
+              </div>
+            </div>
+
+          </div>
+        </div>
         <!--impostazioni-->
         <div id="impostazioni"></div>
 
