riempita sezione recenti

--- a/index.html
+++ b/index.html
@@ -129,8 +129,40 @@
           </div>
         </div>
         <!--sezione recenti-->
-        <div class="album-container"></div>
-
+        <div class="album-container">
+            <h1>Recenti</h1>
+            <div class="flex-container albums">
+              <div class="album">
+                <img class="round" src="img/album_1.jpg" alt="Handsome devils">
+                <p class="album-label">Handsome Devils</p>
+              </div>
+              <div class="album">
+                <img class="round" src="img/album_2.jpg" alt="Handsome devils">
+                <p class="album-label">Columbia Records</p>
+              </div>
+              <div class="album">
+                <img class="" src="img/album_3.jpg" alt="Handsome devils">
+                <p class="album-label">Jason Derulo</p>
+              </div>
+              <div class="album">
+                <img class="round" src="img/album_4.png" alt="Handsome devils">
+                <p class="album-label">Twentyone Pilots</p>
+              </div>
+              <div class="album">
+                <img class="round" src="img/album_5.jpg" alt="Handsome devils">
+                <p class="album-label">Iron Maiden</p>
+              </div>
+              <div class="album">
+                <img class="" src="img/album_6.jpg" alt="Handsome devils">
+                <p class="album-label">Queen</p>
+              </div>
+              <div class="album">
+                <img class="" src="img/album_7.jpg" alt="Handsome devils">
+                <p class="album-label">Gorillaz</p>
+              </div>
+            </div>
+          </div>
+        
       </section>
 
 
