--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   -->
-  <!--   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script> -->
   <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Spotify</title>
@@ -32,9 +26,9 @@
             </div>
 
             <div class="navigation">
-              <div class="nav-button"><a class="nav-link" href="#">Cerca</a></div>
-              <div class="nav-button"><a class="nav-link" href="#">Home</a></div>
-              <div class="nav-button"><a class="nav-link" href="#">La tua libreria</a></div>
+              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-search "></span> <span class="hide-when-mobile">Cerca</span> </a></div>
+              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-home "></span> <span class="hide-when-mobile">Home</span> </a></div>
+              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-folder-open "></span> <span class="hide-when-mobile"> La tua libreria</span> </a></div>
             </div>
 
             <div id="recent">
