Aggiunto script per inserire nome utente inseriti margini in left-side bottom

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           </div>
 
           <div class="bottom">
-            <div>install</div>
-            <hr>
-            <div id="user">User</div>
+            <div> <span class="glyphicon glyphicon-save"></span> Install</div>
+            <hr id="bot-hr">
+            <div><span class="glyphicon glyphicon-user"></span> <span id="user">User</span></div> 
           </div>
         </div>
       </section>
@@ -204,6 +204,7 @@
       </div>
     </section>
   </div>
+  <script>document.getElementById("user").innerHTML= "Edoardo" </script>
 </body>
 
 </html>
