--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
             </div>
 
             <div class="navigation">
-              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-search "></span> <span class="hide-when-mobile">Cerca</span> </a></div>
-              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-home "></span> <span class="hide-when-mobile">Home</span> </a></div>
-              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-folder-open "></span> <span class="hide-when-mobile"> La tua libreria</span> </a></div>
+              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-search "></span>
+                  <span class="hide-when-mobile">Cerca</span> </a></div>
+              <div class="nav-button"><a class="nav-link" href="#"><span class=" glyphicon glyphicon-home "></span>
+                  <span class="hide-when-mobile">Home</span> </a></div>
+              <div class="nav-button"><a class="nav-link" href="#"><span
+                    class=" glyphicon glyphicon-folder-open "></span> <span class="hide-when-mobile"> La tua
+                    libreria</span> </a></div>
             </div>
 
             <div id="recent">
@@ -55,7 +59,7 @@
           <div class="bottom">
             <div> <span class="glyphicon glyphicon-save"></span> Install</div>
             <hr id="bot-hr">
-            <div><span class="glyphicon glyphicon-user"></span> <span id="user">User</span></div> 
+            <div><span class="glyphicon glyphicon-user"></span> <span id="user">User</span></div>
           </div>
         </div>
       </section>
@@ -83,6 +87,17 @@
               <div></div>
               <div></div>
               <div></div>
+            </div>
+          </div>
+
+          <div class="menu-active">
+            <div class="flex-container">
+              <div class="nav-label">IN EVIDENZA</div>
+              <div class="nav-label">PODCAST</div>
+              <div class="nav-label">CLASSIFICHE</div>
+              <div class="nav-label">GENERI E MOOD</div>
+              <div class="nav-label">NUOVE USCITE</div>
+              <div class="nav-label">SCOPRI</div>
             </div>
           </div>
         </div>
@@ -124,39 +139,39 @@
         </div>
         <!--sezione recenti-->
         <div class="album-container">
-            <h1>Recenti</h1>
-            <div class="flex-container albums">
-              <div class="album">
-                <img class="round" src="img/album_1.jpg" alt="Handsome devils">
-                <p class="album-label">Handsome Devils</p>
-              </div>
-              <div class="album">
-                <img class="round" src="img/album_2.jpg" alt="Handsome devils">
-                <p class="album-label">Columbia Records</p>
-              </div>
-              <div class="album">
-                <img class="" src="img/album_3.jpg" alt="Handsome devils">
-                <p class="album-label">Jason Derulo</p>
-              </div>
-              <div class="album">
-                <img class="round" src="img/album_4.png" alt="Handsome devils">
-                <p class="album-label">Twentyone Pilots</p>
-              </div>
-              <div class="album">
-                <img class="round" src="img/album_5.jpg" alt="Handsome devils">
-                <p class="album-label">Iron Maiden</p>
-              </div>
-              <div class="album">
-                <img class="" src="img/album_6.jpg" alt="Handsome devils">
-                <p class="album-label">Queen</p>
-              </div>
-              <div class="album">
-                <img class="" src="img/album_7.jpg" alt="Handsome devils">
-                <p class="album-label">Gorillaz</p>
-              </div>
+          <h1>Recenti</h1>
+          <div class="flex-container albums">
+            <div class="album">
+              <img class="round" src="img/album_1.jpg" alt="Handsome devils">
+              <p class="album-label">Handsome Devils</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_2.jpg" alt="Handsome devils">
+              <p class="album-label">Columbia Records</p>
+            </div>
+            <div class="album">
+              <img class="" src="img/album_3.jpg" alt="Handsome devils">
+              <p class="album-label">Jason Derulo</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_4.png" alt="Handsome devils">
+              <p class="album-label">Twentyone Pilots</p>
+            </div>
+            <div class="album">
+              <img class="round" src="img/album_5.jpg" alt="Handsome devils">
+              <p class="album-label">Iron Maiden</p>
+            </div>
+            <div class="album">
+              <img class="" src="img/album_6.jpg" alt="Handsome devils">
+              <p class="album-label">Queen</p>
+            </div>
+            <div class="album">
+              <img class="" src="img/album_7.jpg" alt="Handsome devils">
+              <p class="album-label">Gorillaz</p>
             </div>
           </div>
-        
+        </div>
+
       </section>
 
 
@@ -198,13 +213,22 @@
           </div>
         </div>
         <!--impostazioni-->
-        <div id="impostazioni"></div>
+        <div id="impostazioni">
+          <div class="flex-container">
+            <div><span class="glyphicon glyphicon-th-list"></span></div>
+            <div><span class="glyphicon glyphicon-blackboard"></span> </div>
+            <div>
+              <span class="glyphicon glyphicon-volume-up"></span>
+              <span class="hide-when-mobile"> <input type="range" name="" id=""></span>
+            </div>
+          </div>
+        </div>
 
 
       </div>
     </section>
   </div>
-  <script>document.getElementById("user").innerHTML= "Edoardo" </script>
+  <script>document.getElementById("user").innerHTML = "Edoardo" </script>
 </body>
 
 </html>
